[tool.poetry]
name = "lc96parser"
version = "0.0.1"
description = ""
authors = ["Chang Ye <yech1990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.2"
numpy = "^1.26.1"
scipy = "^1.11.3"
matplotlib = "^3.8.1"
lxml = "^4.9.3"
xlsxwriter = "^3.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
